--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         </head>
     <body>
         <header>
-            <img src="/uploads/2020/12/folder-303891_1280_0_1606895367.png"/>
+            <img src="https://learn.logikaschool.com//uploads/2020/12/folder-303891_1280_0_1606895367.png"/>
             <a href="">Курси</a>
             <a href="">Пробні заняття</a>
         </header>
         <main>
-            <h1>Школа <br/>копірайтингу Doc+<br/><img src="/uploads/2020/12/list-2389219_1280_0_1606895367.png"/></h1>
-            <p><img src="/uploads/2020/12/gui-2457113_1280_0_1606895367.png"/><img src="/uploads/2020/12/word-cloud-679937_1280_0_1606895368.png"/></p>
+            <h1>Школа <br/>копірайтингу Doc+<br/><img src="https://learn.logikaschool.com//uploads/2020/12/list-2389219_1280_0_1606895367.png"/></h1>
+            <p><img src="https://learn.logikaschool.com//uploads/2020/12/gui-2457113_1280_0_1606895367.png"/><img src="https://learn.logikaschool.com//uploads/2020/12/word-cloud-679937_1280_0_1606895368.png"/></p>
         </main>
         <footer>
             <p>Адреса: м. Творче, вул. 1-а Сільська, буд.11</p>
